--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,16 @@
 }
 
 body {
-  background: rgba(255, 254, 251, 0.8);
+  background-color: #F7F8FA;
   margin: 0;
 }
 
 h1, h2, h3, p {
   margin: 0;
+}
+
+.mla {
+  margin-left: auto;
 }
 
 .wrapper {
@@ -57,7 +61,8 @@ h1, h2, h3, p {
   max-width: 290px;
   -webkit-box-shadow: 0px 3.61062px 9.02655px rgba(0, 0, 0, 0.05);
           box-shadow: 0px 3.61062px 9.02655px rgba(0, 0, 0, 0.05);
-  padding: 27px 0px;
+  height: 100vh;
+  background-color: #fff;
 }
 .sidebar header {
   display: -webkit-box;
@@ -72,6 +77,7 @@ h1, h2, h3, p {
 .sidebar__header__image {
   width: 100%;
   border-bottom: 1px solid #D8E0E6;
+  padding-top: 27px;
   padding-bottom: 26px;
 }
 .sidebar__menu {
@@ -360,6 +366,7 @@ main h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 25px;
 }
 .main__header__list {
   list-style: none;
@@ -371,10 +378,7 @@ main h1 {
   -webkit-box-align: stretch;
       -ms-flex-align: stretch;
           align-items: stretch;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  gap: 90px;
+  gap: 60px;
   width: 100%;
 }
 .main__header__item {
@@ -418,18 +422,278 @@ main h1 {
   line-height: 25px;
   color: #6A6E71;
   text-decoration: none;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .logo {
   float: none;
   margin-right: 0;
+  padding: 13px 43px 13px 0px;
 }
 
-.dashboard__header__link {
-  padding: 0;
+.dashboard {
+  margin-left: 25px;
+  margin-right: 24px;
 }
+.dashboard__score__info {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  margin-left: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.dashboard__score__title {
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 22px;
+  line-height: 26px;
+  color: #050C42;
+  width: 100%;
+  max-width: 372px;
+  padding-right: 190px;
+}
+.dashboard__header {
+  border-radius: 20px 20px 0px 0px;
+  background-color: #ECF0F3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.dashboard__header__list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.dashboard__header__item {
+  height: 65px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+}
+.dashboard__header__item.active {
+  background-color: #fff;
+}
+.dashboard__header__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px 82px;
+  text-decoration: none;
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #050C42;
+}
+.dashboard__body {
+  background-color: #fff;
+  padding: 42px 43px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.dashboard__lineup {
+  max-width: 255px;
+  width: 100%;
+  border-radius: 14px;
+  padding: 24px 23px;
+  background: #ECF0F3;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+}
+.dashboard__lineup__title {
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 26px;
+  color: #050C42;
+  margin-bottom: 25px;
+}
+.dashboard__lineup__table {
+  width: 100%;
+}
+.dashboard__lineup__table__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 24px;
+}
+.dashboard__lineup__table__name {
+  margin-left: 18px;
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px;
+  color: #6A6E71;
+}
+.dashboard__lineup__table__time {
+  margin-left: auto;
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px;
+  color: #6A6E71;
+}
+
+.player {
+  background: #FFFFFF;
+  -webkit-box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 4px 9px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 269px;
+  height: 92px;
+  position: relative;
+  border-radius: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.player__score {
+  position: absolute;
+  background: #6CDC9D;
+  border-radius: 8px 0px 0px 0px;
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  color: #fff;
+  padding: 3px 2px;
+  top: 0;
+  left: 0;
+}
+.player__name {
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  color: #050C42;
+  padding-left: 28px;
+}
+.player__country {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.player__country__name {
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 14.6px;
+  line-height: 1;
+  color: #D0D8DF;
+  padding-left: 28px;
+  margin-right: 7px;
+}
+.player__personal-number {
+  font-family: Source Sans Pro, sans-serif, sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 1;
+  color: rgba(5, 12, 66, 0.1);
+  padding-right: 50px;
+}
+.player__photo {
+  position: absolute;
+  right: 10px;
+  bottom: 0;
+}
+
 .download-player {
   padding: 0;
   border-radius: 10px;
   height: 60px;
+  background: #EC805B;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+  margin-left: 53px;
+}
+
+.metric {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.metric__graph {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
